fix contentBlock align bug

--- a/EasyNote/wwwroot/css/Calendar.css
+++ b/EasyNote/wwwroot/css/Calendar.css
@@ -258,6 +258,7 @@
     padding: 2px 10px;
     opacity: 0;
     transition: all 0.3s;
+    user-select: none;
 }
 
     #new_event_btn:hover {
